Aggiungi creazione della cartella build prima della compilazione del binario

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
 
             - name: Build binary
               run: |
+                  mkdir -p build
                   go build -ldflags "-X main.version=${{ steps.version.outputs.version }}" \
                     -o build/${{ matrix.binary_name }} \
                     ./cmd/paperless-merger
