--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,17 @@ jobs:
                   echo "version=$VERSION" >> $GITHUB_OUTPUT
                   echo "Version: $VERSION"
 
+            - name: Debug - List directory structure
+              run: |
+                  echo "Current directory:"
+                  pwd
+                  echo "Directory contents:"
+                  ls -la
+                  echo "cmd directory:"
+                  ls -la cmd/ || echo "cmd directory not found"
+                  echo "cmd/paperless-merger directory:"
+                  ls -la cmd/paperless-merger/ || echo "cmd/paperless-merger directory not found"
+
             - name: Build binary
               run: |
                   mkdir -p build
